fix(Dropdown): set padding-inline-start to 0 on small selectedItem

--- a/packages/core/src/components/Dropdown/components/Trigger/Trigger.module.scss
+++ b/packages/core/src/components/Dropdown/components/Trigger/Trigger.module.scss
@@ -58,7 +58,7 @@
     @include smoothing-text;
 
     &.small {
-      padding-inline-start: var(--spacing-small);
+      padding-inline-start: 0;
       min-height: 32px;
       height: 32px;
     }
